[package]
name = "oxidizemc-test-mod"
version = "0.0.0-dev.1"
edition = "2024"
authors = ["PitchBlackNights <pitchblacknights@proton.me>"]
repository = "https://github.com/oxidizemc/oxidizemc-test-mod"
license = "MIT"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
oxidizemc = { path = "../oxidizemc" }
# oxidizemc = "0.1.0"
oxidizemc-fabric = { path = "../oxidizemc-fabric" }
# oxidizemc-fabric = "0.1.0"
# java-oxide = "0.1.0"

[build-dependencies]
oxidizemc = { path = "../oxidizemc", default-features = false, features = ["build"] }
# oxidizemc = { version = "0.1.0", default-features = false, features = ["build"] }
oxidizemc-fabric = { path = "../oxidizemc-fabric", default-features = false, features = ["build"] }
# oxidizemc-fabric = { version = "0.1.0", default-features = false, features = ["build"] }
